day4/dov-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dov-deploy
    labels:
        name: dov-deploy
spec:
    replicas: 2
    selector:
        matchLabels: 
            name: dov-pod
    template:
        metadata:
            name: dov-pod
            labels:
                name: dov-pod
                dept: engg
    # namespace: myns
        spec:
            affinity:
                podAntiAffinity:
                    requiredDuringSchedulingIngoredDuringExecution:
                        - labelSelector:
                            matchLabels:
                                name: dov-pod
                                dept: engg
                            #topology key, means shouldn't be on the same key
                          topologyKey: doks.digitalocean.com/node-id
            containers:
                - name: dov-container
                  image: stackupiss/dov-bear:v2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: dov-svc
    labels:
        name: dov-svc
spec:
    type: NodePort
    selector:
        name: dov-pod
    ports:
        - port: 8080
          targetPort: 3000
---
